  - Moved "id" attribute from container (section etc.) to title's <a>
    tag, to be on the same tag as "name".
    (!!! To be reverted in Docutils 0.5.)
  - Added vertical space between fields of field lists.
  - Added ``--compact-field-lists`` option to remove vertical space in
    simple field lists.
  - Made cloaking of email addresses with ``--cloak-email-addresses``
    less obtrusive.

* docutils/writers/latex2e.py:

  - Underscores in citekeys are no longer escaped.

* docutils/writers/s5_html.py: Added to project; writer for S5-format
  slide shows.

* docutils/writers/support/: Directory added to project.  Modules and
  data files that support writers have been moved here.

  The stylesheets are now installed along with the code, the code
  knows where to find them, and the default is to use (actually, to
  embed) the built-in stylesheets.  Some adjustments to configuration
  files may be necessary.  The easiest way to obtain the new default
  behavior is to remove all settings whose name includes "stylesheet".

* docutils/writers/support/newlatex2e/unicode_map.py: Added to
  project; mapping of Unicode characters to LaTeX equivalents.

* docs/dev/distributing.txt: Added to project; guide for distributors
  (package maintainers).

* docs/dev/hacking.txt: Added to project; guide for developers.

* docs/ref/doctree.txt:

  - Updated for plural attributes "classes", "ids", "names",
    "dupnames".
  - Added the "container" element.

* docs/ref/docutils.dtd:

  - Updated for plural attributes "classes", "ids", "names",
    "dupnames".

* docs/user/links.txt: Added to project; lists of Docutils-related
  links.

* docs/user/mailing-lists.txt: Added to project; information about
  Docutils-related mailing lists and how to access them.

* docs/user/slide-shows.txt: Added to project; example of and docs for
  the S5/HTML writer (rst2s5.py front end).

* docs/ref/rst/substitutions.txt: "reStructuredText Standard
  Substitution Definition Sets", added to project.
